{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 254,
  "lineage": "ea5ed22c-34ef-b435-182e-ca7355377ffb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "CyberSecurityEIPAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022d1fd159c321e2e",
            "arn": "arn:aws:ec2:us-east-1:599738044473:elastic-ip/eipalloc-022d1fd159c321e2e",
            "associate_with_private_ip": "true",
            "domain": "vpc",
            "id": "eipalloc-022d1fd159c321e2e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-172-205-183.compute-1.amazonaws.com",
            "public_ip": "35.172.205.183",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NATAllocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0104d01352d1d785e",
            "arn": "arn:aws:ec2:us-east-1:599738044473:elastic-ip/eipalloc-0104d01352d1d785e",
            "domain": "vpc",
            "id": "eipalloc-0104d01352d1d785e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-21-210-105.compute-1.amazonaws.com",
            "public_ip": "107.21.210.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_vpc.CyberSecurityVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00917b03a500812e7",
            "arn": "arn:aws:ec2:us-east-1:599738044473:elastic-ip/eipalloc-00917b03a500812e7",
            "domain": "vpc",
            "id": "eipalloc-00917b03a500812e7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-147-168-198.compute-1.amazonaws.com",
            "public_ip": "54.147.168.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CyberSecurityInstanceMysqlAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:599738044473:instance/i-0a24112ea86d5e2ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a24112ea86d5e2ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CyberSecurityKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05572c8c4bc561c16",
            "private_dns": "ip-172-16-0-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4c21f372032bf77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a18fa548916117e",
            "tags": {
              "Name": "CyberSecurityInstanceMysqlAZ1"
            },
            "tags_all": {
              "Name": "CyberSecurityInstanceMysqlAZ1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1247716e6ebccaf",
              "sg-0fa215ce6b1c5552f"
            ]
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_key_pair.CyberSecurityKeyPair",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_route_table.CyberSecurityPrivateRouteTable",
            "aws_security_group.CyberSecurityMysqlSGAZ1",
            "aws_security_group.CyberSecuritySshSGAZ1",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CyberSecurityInstanceWordPressAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:599738044473:instance/i-0edebe606e0431f80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edebe606e0431f80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CyberSecurityKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02765647c26a20cc5",
            "private_dns": "ip-172-16-0-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.28",
            "public_dns": "ec2-54-160-39-78.compute-1.amazonaws.com",
            "public_ip": "54.160.39.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eef975a34fe56d29",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002cb5988a63c6568",
            "tags": {
              "Name": "CyberSecurityInstanceWordPressAZ1"
            },
            "tags_all": {
              "Name": "CyberSecurityInstanceWordPressAZ1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03770a98c28310efb"
            ]
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_instance.CyberSecurityInstanceMysqlAZ1",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_key_pair.CyberSecurityKeyPair",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_route_table.CyberSecurityPrivateRouteTable",
            "aws_security_group.CyberSecurityMysqlSGAZ1",
            "aws_security_group.CyberSecuritySG",
            "aws_security_group.CyberSecuritySshSGAZ1",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CyberSecurityGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:internet-gateway/igw-00265ea192592896e",
            "id": "igw-00265ea192592896e",
            "owner_id": "599738044473",
            "tags": {
              "Name": "CyberSecurityGateway"
            },
            "tags_all": {
              "Name": "CyberSecurityGateway"
            },
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "dependencies": [
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGatewayPrivateNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0104d01352d1d785e",
            "association_id": "eipassoc-01b806be4aefd455e",
            "connectivity_type": "public",
            "id": "nat-0c5db8ce24d1483c4",
            "network_interface_id": "eni-062a061ae33ed8492",
            "private_ip": "172.16.0.45",
            "public_ip": "107.21.210.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002cb5988a63c6568"
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00917b03a500812e7",
            "association_id": "eipassoc-0cc4955a8f4fec38e",
            "connectivity_type": "public",
            "id": "nat-043d1f0b06efd5f25",
            "network_interface_id": "eni-0893b0aed1a2af8e8",
            "private_ip": "172.16.0.102",
            "public_ip": "54.147.168.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f415074125849d98"
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "CyberSecurityInterfaceAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:network-interface/eni-0ab35e5393bb9abd4",
            "id": "eni-0ab35e5393bb9abd4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f3:4a:82:05:11",
            "owner_id": "599738044473",
            "private_dns_name": "ip-172-16-0-4.ec2.internal",
            "private_ip": "172.16.0.4",
            "private_ip_list": [
              "172.16.0.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.0.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03770a98c28310efb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002cb5988a63c6568",
            "tags": {
              "Name": "CyberSecurityInterfaceAZ1"
            },
            "tags_all": {
              "Name": "CyberSecurityInterfaceAZ1"
            }
          },
          "dependencies": [
            "aws_security_group.CyberSecuritySG",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "CyberSecurityPrivateInterfaceAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:network-interface/eni-0b6b24b532707262f",
            "id": "eni-0b6b24b532707262f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:47:e9:69:e2:27",
            "owner_id": "599738044473",
            "private_dns_name": "ip-172-16-0-132.ec2.internal",
            "private_ip": "172.16.0.132",
            "private_ip_list": [
              "172.16.0.132"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.0.132"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b1247716e6ebccaf",
              "sg-0fa215ce6b1c5552f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a18fa548916117e",
            "tags": {
              "Name": "CyberSecurityPrivateInterfaceAZ1"
            },
            "tags_all": {
              "Name": "CyberSecurityPrivateInterfaceAZ1"
            }
          },
          "dependencies": [
            "aws_security_group.CyberSecurityMysqlSGAZ1",
            "aws_security_group.CyberSecuritySshSGAZ1",
            "aws_subnet.private_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CyberSecurityPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:route-table/rtb-010d669ee7e75c0a2",
            "id": "rtb-010d669ee7e75c0a2",
            "owner_id": "599738044473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5db8ce24d1483c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CyberSecurityPrivateRouteTable-1"
            },
            "tags_all": {
              "Name": "CyberSecurityPrivateRouteTable-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:route-table/rtb-0199087bc1af146d6",
            "id": "rtb-0199087bc1af146d6",
            "owner_id": "599738044473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-043d1f0b06efd5f25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CyberSecurityPrivateRouteTable-2"
            },
            "tags_all": {
              "Name": "CyberSecurityPrivateRouteTable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CyberSecuritySecondRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:route-table/rtb-0ba9a5bc31f37a26b",
            "id": "rtb-0ba9a5bc31f37a26b",
            "owner_id": "599738044473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00265ea192592896e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CyberSecuritySecondRouteTable"
            },
            "tags_all": {
              "Name": "CyberSecuritySecondRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAssociationToPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4455d3102e4dba",
            "route_table_id": "rtb-010d669ee7e75c0a2",
            "subnet_id": "subnet-02a18fa548916117e"
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_route_table.CyberSecurityPrivateRouteTable",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3ce5695f7ac70d",
            "route_table_id": "rtb-0199087bc1af146d6",
            "subnet_id": "subnet-0ad4fb1ca0f0a0575"
          },
          "dependencies": [
            "aws_eip.NATAllocation",
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_nat_gateway.NATGatewayPrivateNetwork",
            "aws_route_table.CyberSecurityPrivateRouteTable",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAssociationToSecondRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029ac6e3df07fa13e",
            "route_table_id": "rtb-0ba9a5bc31f37a26b",
            "subnet_id": "subnet-002cb5988a63c6568"
          },
          "dependencies": [
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_route_table.CyberSecuritySecondRouteTable",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8aa5ceeb40361c8",
            "route_table_id": "rtb-0ba9a5bc31f37a26b",
            "subnet_id": "subnet-0f415074125849d98"
          },
          "dependencies": [
            "aws_internet_gateway.CyberSecurityGateway",
            "aws_route_table.CyberSecuritySecondRouteTable",
            "aws_subnet.public_subnets",
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CyberSecurityMysqlSGAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:security-group/sg-0fa215ce6b1c5552f",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa215ce6b1c5552f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/26"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/26"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-AZ1-sg",
            "name_prefix": "",
            "owner_id": "599738044473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL-Security-Group"
            },
            "tags_all": {
              "Name": "MySQL-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CyberSecuritySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:security-group/sg-03770a98c28310efb",
            "description": "Allow SSH and HTTP/HTTPS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03770a98c28310efb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-access-sg",
            "name_prefix": "",
            "owner_id": "599738044473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-Security-Group"
            },
            "tags_all": {
              "Name": "SSH-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CyberSecuritySshSGAZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:security-group/sg-0b1247716e6ebccaf",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1247716e6ebccaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/26"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-accessmysqlAZ1-sg",
            "name_prefix": "",
            "owner_id": "599738044473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-Security-Group"
            },
            "tags_all": {
              "Name": "SSH-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CyberSecurityVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:subnet/subnet-02a18fa548916117e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a18fa548916117e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599738044473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "dependencies": [
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:subnet/subnet-0ad4fb1ca0f0a0575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4fb1ca0f0a0575",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599738044473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "dependencies": [
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:subnet/subnet-002cb5988a63c6568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002cb5988a63c6568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "599738044473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "dependencies": [
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:subnet/subnet-0f415074125849d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f415074125849d98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "599738044473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0ed11d2882a7ceb9b"
          },
          "dependencies": [
            "aws_vpc.CyberSecurityVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CyberSecurityVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599738044473:vpc/vpc-0ed11d2882a7ceb9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/24",
            "default_network_acl_id": "acl-03683ceb7685c9f75",
            "default_route_table_id": "rtb-0076dee25b82b8f59",
            "default_security_group_id": "sg-04ddba80195821104",
            "dhcp_options_id": "dopt-0ba1d733b394394b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed11d2882a7ceb9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0076dee25b82b8f59",
            "owner_id": "599738044473",
            "tags": {
              "Name": "CyberSecurityVPC"
            },
            "tags_all": {
              "Name": "CyberSecurityVPC"
            }
          }
        }
      ]
    }
  ]
}